# myffmpeg

./: CMakeLists.txt  main.cpp
avcore/: CMakeLists.txt  avinfo.cpp  avinfo.h  mymath.cpp  mymath.h
